--- a/templates/plugins/sms_adj.html
+++ b/templates/plugins/sms_adj.html
@@ -20,7 +20,9 @@ $var page: plugins
 <div id="plugin">
     <div class="title">SMS Settings</div>
     <p>For this plugin is needed to SMS modem with the telephone service provider.</p>
-    <p>For more information visit the <a href="http://www.pihrt.com/elektronika/259-moje-rapsberry-pi-sms-ovladani-rpi">www.pihrt.com</a> for instructions.</p>
+    <p>This plugin needs Gammu. If not installed Gammu and Python-Gammu, plugin installs Gammu and Python-Gammu in to the system himself.</p>
+    <p>On first use please wait for status.</p>
+    <p>Visit <a href="http://www.pihrt.com/elektronika/259-moje-rapsberry-pi-sms-ovladani-rpi">Martin Pihrt's blog</a> for more information.</p>
     <form id="pluginForm" action="$plugins.plugin_url('sms_adj.settings_page')" method="post">
         <table class="optionList">
             <tr>
