--- a/templates/plugins/email_notifications.html
+++ b/templates/plugins/email_notifications.html
@@ -13,6 +13,9 @@ $var page: plugins
         jQuery("button#cCancel").click(function(){
             window.location="/";
         });
+        jQuery("button#docButton").click(function(){
+            window.open("/static/docs/plugins/email_notifications-docs.html", "_blank");
+        });
 
     });
 </script>
