--- a/templates/plugins/email_notifications.html
+++ b/templates/plugins/email_notifications.html
@@ -22,7 +22,7 @@ $var page: plugins
 
 <div id="plugin">
     <div class="title">Email Notifications</div>
-    <p>This plugin can send E-mails. For this plugin you need a GMail account as provider.</p>
+    <button class="execute" id="docButton" type="button" >Help</button>
     <form id="pluginForm" action="$plugins.plugin_url('email_notifications.settings_page')" method="post">
         <table class="optionList">
             <tr>
