--- a/templates/plugins/lcd_display.html
+++ b/templates/plugins/lcd_display.html
@@ -13,16 +13,16 @@ $var page: plugins
         jQuery("button#cCancel").click(function(){
             window.location="/";
         });
+        jQuery("button#docButton").click(function(){
+            window.open("/static/docs/plugins/lcd_display-docs.html", "_blank");
+        });
 
     });
 </script>
 
 <div id="plugin">
     <div class="title">LCD settings</div>
-    <p>This plugin shows information on a 16x2 or 16x1 character LCD with PCF8574(A).</p>
-    <p>Automatically detects the display at the following I2C addresses: 0x20-0x27, 0x38-0x3F.</p>
-    <p>Compatible with the HD44780 controller.</p>
-    <p>Visit <a href="http://www.pihrt.com/elektronika/258-moje-rapsberry-pi-i2c-lcd-16x2">Martin Pihrt's blog</a> for more information.</p><br>
+    <button class="execute" id="docButton" type="button" >Help</button>
     <form id="pluginForm" action="$plugins.plugin_url('lcd_display.settings_page')" method="post">
         <table class="optionList">
             <tr>
